fix Select2 vs Bootstrap form-control styling – selected option overflow

--- a/Seeder/static/main.css
+++ b/Seeder/static/main.css
@@ -7,7 +7,6 @@ body {
   padding-top: 50px;
 }
 
-
 /*
  * Global add-ons
  */
@@ -66,7 +65,6 @@ body {
   background-color: #428bca;
 }
 
-
 /*
  * Main content
  */
@@ -88,7 +86,6 @@ body {
   margin-left: 10px;
 }
 
-
 /*
  * Placeholder dashboard ideas
  */
@@ -108,7 +105,6 @@ body {
   border-radius: 50%;
 }
 
-
 .list-group-item a {
   word-wrap: break-word;
 }
@@ -120,7 +116,6 @@ table td {
 .grid-item {
   width: 300px;
 }
-
 
 .calendar_state_0 {
   background-color: #2c46ad;
@@ -143,13 +138,14 @@ table td {
   background-color: #ad000a;
 }
 
-
 .form-group {
-    max-width: 800px;
+  max-width: 800px;
 }
 
+/* 
+ * Fix Select2 vs Bootstrap form-control styling
+ */
 
-
-
-
-
+.select2-selection {
+  height: auto !important;
+}
